connecting to database

--- a/clerk-mongodb/.env
+++ b/clerk-mongodb/.env
@@ -2,3 +2,5 @@ NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_dXNlZnVsLW1lZXJrYXQtMzguY2xlcmsuYWNjb3
 CLERK_SECRET_KEY=sk_test_AZp8IrueFSR3NwJ9Dp5cIAP0X4mbtO2rpskuoJ1wZr
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
+MONGODB_URL=mongodb+srv://makhohlisatemba:etRt52jg1qj9pXGQ@cluster0.qc2mm.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+WEBHOOK_SECRET=whsec_QXfU8KX6RTuaRlJ5grT47fmvNT9qF1FO
