--- a/clerk-mongodb/package.json
+++ b/clerk-mongodb/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@clerk/nextjs": "^5.7.5",
     "@clerk/themes": "^2.1.37",
+    "mongodb": "^6.9.0",
+    "mongoose": "^8.7.2",
     "next": "14.2.15",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "svix": "^1.37.0"
   },
   "devDependencies": {
     "@types/node": "^20",
